parser/src/parser/expressions/snapshots/test__parser::expressions::let_expr::test::parse_empty_let_expr.snap
---
created: "2020-02-03T16:29:14.775160Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/let_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  FN_DEF@[0; 20)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK@[10; 20)
      L_CURLY@[10; 11) "{"
      LET_STMT@[11; 18)
        LET_KW@[11; 14) "let"
        WHITESPACE@[14; 15) " "
        BIND_PAT@[15; 18)
          NAME@[15; 18)
            IDENT@[15; 18) "foo"
      SEMI@[18; 19) ";"
      R_CURLY@[19; 20) "}"

