parser/src/parser/expressions/snapshots/test__parser::expressions::let_expr::test::parse_let_expr.snap
---
created: "2020-02-03T16:29:14.775841Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/let_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 39)
  FN_DEF@[0; 39)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK@[10; 39)
      L_CURLY@[10; 11) "{"
      LET_STMT@[11; 23)
        LET_KW@[11; 14) "let"
        WHITESPACE@[14; 15) " "
        BIND_PAT@[15; 19)
          NAME@[15; 18)
            IDENT@[15; 18) "foo"
          WHITESPACE@[18; 19) " "
        EQ@[19; 20) "="
        WHITESPACE@[20; 21) " "
        LITERAL@[21; 23)
          INT_NUMBER@[21; 23) "10"
      SEMI@[23; 24) ";"
      WHITESPACE@[24; 25) " "
      LET_STMT@[25; 38)
        LET_KW@[25; 28) "let"
        WHITESPACE@[28; 29) " "
        BIND_PAT@[29; 33)
          NAME@[29; 32)
            IDENT@[29; 32) "bar"
          WHITESPACE@[32; 33) " "
        EQ@[33; 34) "="
        WHITESPACE@[34; 35) " "
        LITERAL@[35; 38)
          STRING@[35; 38) "\"a\""
      R_CURLY@[38; 39) "}"

