parser/src/parser/expressions/snapshots/test__parser::expressions::let_expr::test::parse_let_type_expr.snap
---
created: "2020-03-03T19:30:54.546730Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/let_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 44)
  FN_DEF@[0; 44)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 10)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
      WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 44)
      BLOCK@[10; 44)
        L_CURLY@[10; 11) "{"
        LET_STMT@[11; 22)
          LET_KW@[11; 14) "let"
          WHITESPACE@[14; 15) " "
          BIND_PAT@[15; 18)
            NAME@[15; 18)
              IDENT@[15; 18) "foo"
          COLON@[18; 19) ":"
          IDENT_TYPE@[19; 22)
            IDENT@[19; 22) "i32"
        SEMI@[22; 23) ";"
        WHITESPACE@[23; 24) " "
        LET_STMT@[24; 42)
          LET_KW@[24; 27) "let"
          WHITESPACE@[27; 28) " "
          BIND_PAT@[28; 31)
            NAME@[28; 31)
              IDENT@[28; 31) "bar"
          COLON@[31; 32) ":"
          WHITESPACE@[32; 33) " "
          PAREN_TYPE@[33; 42)
            L_PAREN@[33; 34) "("
            IDENT_TYPE@[34; 37)
              IDENT@[34; 37) "i32"
            COMMA@[37; 38) ","
            IDENT_TYPE@[38; 41)
              IDENT@[38; 41) "i32"
            R_PAREN@[41; 42) ")"
        SEMI@[42; 43) ";"
        R_CURLY@[43; 44) "}"

