parser/src/parser/expressions/snapshots/test__parser::expressions::literal::test::parse_float_literal.snap
---
created: "2020-02-06T15:57:27.639825Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/literal.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 16)
  FN_DEF@[0; 16)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 16)
      BLOCK@[10; 16)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 14)
          LITERAL@[11; 14)
            FLOAT_NUMBER@[11; 14) "1.0"
        SEMI@[14; 15) ";"
        R_CURLY@[15; 16) "}"

