parser/src/parser/expressions/snapshots/test__parser::expressions::literal::test::parse_nil_literal.snap
---
created: "2020-03-03T19:30:54.547273Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/literal.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 16)
  FN_DEF@[0; 15)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 10)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
      WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 15)
      BLOCK@[10; 15)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 14)
          LITERAL@[11; 14)
            NIL_KW@[11; 14) "nil"
        R_CURLY@[14; 15) "}"
  SEMI@[15; 16) ";"

